--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,7 +67,7 @@ body {
    min-height: 100%;
    display: flex;
    flex-direction: column;
-   overflow: hidden;
+   //overflow: hidden;
    // Прижимаем footer
    > main {
       flex: 1 1 auto;
@@ -128,7 +128,3 @@ body {
 @import "header";
 @import "home";
 @import "footer";
-
-body {
-   background-color: $orangeColor;
-}
