--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -56,7 +56,7 @@
    &__body {
       &:not(:last-child) {
          margin-right: rem(80);
-         @media (max-width: $mobile) {
+         @media (max-width: em(1290)) {
             margin-right: 0;
          }
       }
@@ -68,14 +68,35 @@
 }
 .menu-footer {
    //@include adaptiveValueREM("min-width", 438, 250);
-   min-width: rem(438);
+   max-width: rem(250);
+   @media (max-width: em(1290)) {
+      max-width: 100%;
+   }
+   @media (max-width: $mobile) {
+      .body-item-footer__tittle {
+         color: $orangeColor;
+      }
+   }
 }
 .accont-footer {
    //@include adaptiveValueREM("min-width", 376, 250);
-   min-width: rem(376);
+   // min-width: rem(376);
 }
 .update-footer {
    min-width: rem(296);
+   @media (max-width: em(1290)) {
+      .body-item-footer {
+         width: 100%;
+         .body-item-footer__input {
+            width: 100%;
+         }
+      }
+   }
+   @media (max-width: $mobile) {
+      .body-item-footer__tittle {
+         color: $orangeColor;
+      }
+   }
 }
 .body-item-footer {
    &__tittle {
@@ -96,9 +117,6 @@
       font-weight: 500;
       line-height: 1.5;
       color: #616161;
-      @media (max-width: $mobile) {
-         display: none;
-      }
    }
 
    &__text {
@@ -108,6 +126,7 @@
    &__address {
       margin: 0 0 rem(16) rem(10);
       position: relative;
+      cursor: pointer;
       &::before {
          display: inline-block;
          font-size: rem(18);
@@ -115,10 +134,17 @@
          top: 2px;
          left: -10px;
       }
+      @media (any-hover: hover) {
+         transition: color 0.3s ease 0s;
+         &:hover {
+            color: $orangeColor;
+         }
+      }
    }
 
    &__phone {
       margin: 0 0 rem(16) 0;
+      cursor: pointer;
       a {
          margin: 0 0 0 rem(10);
       }
@@ -129,10 +155,22 @@
          top: 2px;
          left: -10px;
       }
+      @media (any-hover: hover) {
+         transition: color 0.3s ease 0s;
+         &:hover {
+            color: $orangeColor;
+         }
+      }
    }
 
    &__link-site {
       margin: 0 0 rem(16) 0;
+      @media (any-hover: hover) {
+         transition: color 0.3s ease 0s;
+         &:hover {
+            color: $orangeColor;
+         }
+      }
    }
 
    &__list {
@@ -147,9 +185,17 @@
    }
 
    &__link {
+      @media (any-hover: hover) {
+         transition: color 0.3s ease 0s;
+         &:hover {
+            color: $orangeColor;
+         }
+      }
    }
 
    &__form {
+      display: flex;
+      flex-wrap: nowrap;
    }
 
    &__input {
@@ -158,6 +204,11 @@
       padding: rem(10) rem(12);
       color: #828282;
       line-height: 1.5;
+      border: 2px solid;
+      &:focus {
+         outline: none !important;
+         border-color: $orangeColor;
+      }
    }
 
    &__btn {
@@ -166,6 +217,13 @@
       height: rem(45);
       background-color: #e89f71;
       color: #ffffff;
+      transition: all 0.3s ease 0s;
+      @media (any-hover: hover) {
+         &:hover {
+            color: $orangeColor;
+            background-color: #f9f1e7;
+         }
+      }
    }
 }
 
