--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -64,6 +64,9 @@
          width: 50%;
          text-align: center;
       }
+      @media (max-width: $mobile) {
+         width: 100%;
+      }
    }
 }
 .menu-footer {
@@ -75,6 +78,10 @@
    @media (max-width: $mobile) {
       .body-item-footer__tittle {
          color: $orangeColor;
+         // text-align: left;
+      }
+      .body-item-footer__content {
+         //  text-align: left;
       }
    }
 }
@@ -95,6 +102,8 @@
    @media (max-width: $mobile) {
       .body-item-footer__tittle {
          color: $orangeColor;
+         //text-align: right;
+         margin: 20px 0 0 0;
       }
    }
 }
@@ -108,6 +117,41 @@
          cursor: pointer;
          &.active {
             color: $orangeColor;
+         }
+         @media (any-hover: hover) {
+            transition: all 0.3s ease 0s;
+            &:hover {
+               color: $orangeColor;
+               &::before {
+                  transform: rotate(180deg);
+               }
+            }
+         }
+      }
+   }
+
+   .toggle-block {
+      @media (min-width: $mobile) {
+         &::before {
+            display: none;
+         }
+      }
+      @extend ._icon-arrow-down;
+      display: flex;
+      justify-content: center;
+      flex-direction: row-reverse;
+      width: 100%;
+      &::before {
+         transition: all 0.3s ease 0s;
+         @extend %ic;
+         font-size: rem(15);
+         display: flex;
+         align-items: center;
+         margin: 0 0 0 rem(20);
+      }
+      &.active {
+         &::before {
+            transform: rotate(180deg);
          }
       }
    }
