--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -7,6 +7,7 @@
    top: 0;
    left: 0;
    background-color: #fcf8f3;
+   overflow: hidden;
 
    &::before {
       content: "";
@@ -19,38 +20,72 @@
    }
 
    &__container {
+      position: relative;
    }
 
    &__body {
       display: flex;
       position: relative;
       padding: 140px 0 0 0;
+      overflow: visible;
+      align-self: flex-end;
+      overflow: visible;
    }
 
    &__content {
-      flex: 1 0 percent(494, 1270);
+      flex: 0 0 percent(494, 1270);
+      z-index: 2;
    }
 
    &__slider {
       min-width: 0;
-      flex: 1 0 percent(934, 1270);
       display: flex;
       flex-direction: column;
+      overflow: visible;
    }
 }
 .content-main-slider {
    &__body {
       padding: rem(60);
+      background: rgba(255, 255, 255, 0.9);
+      @supports ((-webkit-backdrop-filter: blur(31px)) or (backdrop-filter: blur(31px))) {
+         background: rgba(255, 255, 255, 0.72);
+         backdrop-filter: blur(31px);
+      }
+      @media (max-width: $tablet) {
+         background: rgba(255, 255, 255, 0.72);
+         backdrop-filter: unset;
+      }
    }
 
    &__tittle {
       @include adaptiveValueREM("font-size", 56, 16);
+      margin-bottom: em(15, 56);
    }
 
    &__text {
+      font-weight: 500;
+      @include adaptiveValueREM("font-size", 20, 16);
+      line-height: 1.5;
+      color: #898989;
+      margin: 0 0 em(50, 20) 0;
    }
 
    &__btn {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: center;
+      font-weight: 600;
+
+      span {
+         min-width: em(94, 20);
+      }
+      @include adaptiveValueREM("font-size", 20, 16);
+      line-height: 1.5;
+      color: #ffffff;
+      padding: em(24, 20) em(140, 20);
+      background-color: $orangeColor;
    }
 }
 .slider-main {
@@ -58,6 +93,9 @@
    }
 
    &__body {
+      @include adaptiveValueREM("width", 934, 320);
+      overflow: visible;
+      align-self: flex-end;
    }
 
    &__slider {
@@ -87,6 +125,7 @@
 }
 
 .swiper {
+   overflow: visible !important;
 }
 .swiper-wrapper {
 }
@@ -105,6 +144,9 @@
    }
 
    &__content {
+      position: absolute;
+      top: 0;
+      left: 0;
    }
 }
 .swiper-slide {
