--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -93,7 +93,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin: 0 0 32px 0;
+      margin: 0 0 32px 32px;
    }
 
    &__body {
@@ -120,6 +120,9 @@
    .swiper-pagination-bullet {
       width: 11px;
       height: 11px;
+      &:not(:last-child) {
+         margin: 0 12px 0 0 !important;
+      }
    }
    .swiper-pagination-bullet.swiper-pagination-bullet-active {
       transition: all 0.3s ease 0.1s;
@@ -134,6 +137,9 @@
       justify-content: center;
       align-items: center;
       opacity: 1;
+      &:last-child {
+         margin: 0 !important;
+      }
    }
    .swiper-pagination-bullet.swiper-pagination-bullet-active:after {
       content: "";
