Added breakpoints for main slider

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -269,7 +269,7 @@
       @media (any-hover: hover) {
          &:hover {
             color: $orangeColor;
-            background-color: #f9f1e7;
+            background-color: rgba(232, 159, 113, 0.3);
          }
       }
    }
