--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -30,6 +30,9 @@
       overflow: visible;
       align-self: flex-end;
       overflow: visible;
+      @media (max-width: em(1200)) {
+         flex-direction: column;
+      }
    }
 
    &__content {
@@ -52,15 +55,20 @@
          background: rgba(255, 255, 255, 0.72);
          backdrop-filter: blur(31px);
       }
-      @media (max-width: $tablet) {
-         background: rgba(255, 255, 255, 0.72);
+      @media (max-width: em(1200)) {
+         padding: rem(20);
          backdrop-filter: unset;
+         background: rgba(255, 255, 255, 1);
+         margin: 0 0 32px 0;
       }
    }
 
    &__tittle {
-      @include adaptiveValueREM("font-size", 56, 16);
+      @include adaptiveValueREM("font-size", 56, 20);
       margin-bottom: em(15, 56);
+      @media (max-width: em(1200)) {
+         text-align: center;
+      }
    }
 
    &__text {
@@ -69,6 +77,12 @@
       line-height: 1.5;
       color: #898989;
       margin: 0 0 em(50, 20) 0;
+      @media (max-width: em(1200)) {
+         margin: 0;
+      }
+      @media (max-width: em(1200)) {
+         text-align: center;
+      }
    }
 
    &__btn {
@@ -86,20 +100,67 @@
       color: #ffffff;
       padding: em(24, 20) em(140, 20);
       background-color: $orangeColor;
+      transition: all 0.3s ease 0s;
+      &:hover {
+         background-color: rgba(232, 159, 113, 0.3);
+         color: $orangeColor;
+      }
+      @media (max-width: em(1200)) {
+         display: none;
+      }
+   }
+   &__btn--mobile {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: center;
+      font-weight: 600;
+      order: 3;
+      span {
+         min-width: em(94, 20);
+      }
+      @include adaptiveValueREM("font-size", 20, 16);
+      line-height: 1.5;
+      color: #ffffff;
+      padding: em(24, 20) em(140, 20);
+      background-color: $orangeColor;
+      transition: all 0.3s ease 0s;
+      &:hover {
+         background-color: rgba(232, 159, 113, 0.3);
+         color: $orangeColor;
+      }
+      @media (min-width: 1200px) {
+         display: none;
+      }
    }
 }
+
 .slider-main {
    &__controls {
       display: flex;
       justify-content: space-between;
       align-items: center;
       margin: 0 0 32px 32px;
+      min-height: 27px;
+      @media (max-width: em(1200)) {
+         order: 2;
+         margin: 32px 0;
+         justify-self: center;
+         text-align: center;
+      }
    }
 
    &__body {
-      @include adaptiveValueREM("width", 934, 320);
+      width: 934px;
+      // @include adaptiveValueREM("width", 934, 320);
       overflow: visible;
       align-self: flex-end;
+      @media (max-width: em(1200)) {
+         align-self: center;
+         width: 104%;
+         overflow: hidden;
+         order: 1;
+      }
    }
 
    &__slider {
@@ -112,7 +173,6 @@
    }
 }
 .swiper-slide {
-   background-color: red;
 }
 .controls {
    &__dots {
@@ -151,6 +211,9 @@
 
    &__buttons {
       display: flex;
+      @media (max-width: em(1200)) {
+         display: none;
+      }
    }
 
    &__left-btn {
@@ -193,41 +256,78 @@
    &__img {
       position: relative;
       width: 100%;
-      padding: 50% 0 0 0;
+      padding: 66.703% 0 0 0;
       img {
          position: absolute;
          top: 0;
          left: 0;
          object-fit: cover;
          width: 100%;
+         height: 100%;
       }
    }
 
    &__content {
       position: absolute;
-      top: 0;
-      left: 0;
+      bottom: 0;
+      right: 0;
+      padding: rem(24);
+      margin: 0 rem(40) rem(40) 0;
+      background: rgba(255, 255, 255, 0.9);
+      @supports ((-webkit-backdrop-filter: blur(31px)) or (backdrop-filter: blur(31px))) {
+         background: rgba(255, 255, 255, 0.72);
+         backdrop-filter: blur(31px);
+      }
+      @media (max-width: $mobile) {
+         position: relative;
+         margin: 0;
+      }
    }
 }
 .swiper-slide {
 }
 .content-slide {
-   &__body {
-   }
-
    &__tittle {
+      font-size: rem(28);
+      line-height: 1.2;
+      font-weight: 600;
+      margin: 0 0 rem(4) 0;
+      color: $mainColor;
    }
 
    &__text {
+      margin: 0 0 rem(8) 0;
+      color: $darckGrayColor;
+      line-height: 1.5;
    }
 
    &__price {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
    }
 }
 .price-slide {
    &__price {
+      font-size: rem(20);
+      color: $mainColor;
+      font-weight: 600;
+      margin: 0 rem(97.41) 0 0;
+      min-width: 129px;
    }
 
    &__link {
+      color: $mainColor;
+      font-size: rem(14);
+      line-height: 1.5;
+      font-weight: 600;
+      transition: color 0.3s ease 0s;
+      &:hover {
+         color: $orangeColor;
+      }
+      @media (max-width: $mobile) {
+         color: $orangeColor;
+         font-size: rem(25);
+      }
    }
 }
