Corrected styles for the header

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,5 +1,7 @@
 @import "base/forms/input";
 
+//=======================================================================================
+/*MAIN_SLIDER*/
 .main-slider {
    height: 100%;
    width: 100%;
@@ -336,3 +338,5 @@
       }
    }
 }
+/*MAIN_SLIDER*/
+//=======================================================================================
