--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -14,6 +14,20 @@
 				}
 			}
 		}
+		.header__body {
+			min-height: 70px;
+			@media (max-width: $mobile) {
+				min-height: 50px;
+			}
+		}
+		.search-form__form {
+			&.active {
+				transform: translate(0, 180%);
+				@media (max-width: $mobile) {
+					transform: translate(0, 140%);
+				}
+			}
+		}
 	}
 }
 
@@ -276,7 +290,7 @@
 			}
 		}
 		&.active {
-			transform: translate(0, 230%);
+			transform: translate(0, 180%);
 			display: flex;
 			flex-direction: row;
 			top: 0;
