--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -129,5 +129,7 @@ body {
 
 @import "header";
 @import "home";
+@import "base/lightgallery/lightgallery";
+@import "base/lightgallery/lg-zoom";
 @import "footer";
 @import "popup";
